
5.77  2015-02-03

5.76  2015-02-02
  - Emergency release for a critical security issue that can expose files on
    Windows systems, everybody should update!
  - Increased default max_message_size from 10MB to 16MB in Mojo::Message.
  - Reduced default max_line_size from 10KB to 8KB in Mojo::Headers and
    Mojo::Message.
  - Improved Hypnotoad load balancing by calling srand() after starting a new
    worker in Mojo::Server::Prefork.
  - Improved design of built-in templates.
  - Fixed bug in Mojo::IOLoop where the accept limit was applied too broadly.
  - Fixed bug in Mojo::Server::Prefork where the TTOU signal would not always
    stop a worker.
  - Fixed bug in Mojo::DOM::CSS where combinators needed to be surrounded by
    whitespace.

5.75  2015-01-26
  - Added healthy method to Mojo::Server::Prefork.
  - Improved all built-in web servers to die if group or user assignment
    failed.
  - Improved Hypnotoad to wait for new workers to be ready before stopping the
    old ones during hot deployment.
  - Improved commands and log messages to use less punctuation.
  - Fixed bug in Mojo::IOLoop where the callback passed to next_tick would
    receive the wrong invocant.
  - Fixed race condition and memory leak in Mojo::Server::Prefork.

5.74  2015-01-25
  - Improved parser errors to be more consistent with connection errors in
    Mojo::Message::Request and Mojo::Message::Response.
  - Fixed "0" value bug in Mojo::Parameters.
  - Fixed bug where placeholder default values would not always have
    precedence.
  - Fixed proxy detection in get command.

5.73  2015-01-24
  - Deprecated Mojolicious::Routes::Route::bridge in favor of
    Mojolicious::Routes::Route::under.
  - Deprecated Mojolicious::Controller::render_exception in favor of
    reply->exception helper.
  - Deprecated Mojolicious::Controller::render_not_found in favor of
    reply->not_found helper.
  - Removed deprecated object-oriented Mojo::JSON API.