@@ -1,5 +1,7 @@
 
 5.77  2015-02-03
+  - Fixed canonicalize in Mojo::Path to not remove parts with more than three
+    dots.
 
 5.76  2015-02-02
   - Emergency release for a critical security issue that can expose files on
